--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ button {
 
 .wrapper {
     min-height: 100vh;
+    background: #1e1e1e;
 }
 .container {
     max-width: 725px;
@@ -37,7 +38,7 @@ button {
     padding: 40px;
     background: #212121;
     border-radius: 10px;
-    box-shadow: 0 0 20px 10px rgba(0, 0, 0, .05);
+    box-shadow: 0 0 3px 1px rgba(21, 21, 21, .3);
 }
 .song-block {
     margin-right: 50px;
@@ -64,9 +65,20 @@ button {
 .song__range {
 }
 .controls {
+    display: flex;
+    height: 2px;
     width: 100%;
-    -webkit-appearance: none;
-    transform: translateY(-12px);
+    margin-bottom: 16px;
+    border-radius: 50px;
+    background: #fff;
+}
+.thumb {
+    transform: translateY(-3px);
+    width: 8px;
+    height: 8px;
+    border-radius: 50px;
+    background: #FB8F2C;
+    cursor: pointer;
 }
 .controls::-webkit-slider-thumb {
     transform: translateY(-4px);
@@ -82,6 +94,9 @@ button {
     border-radius: 50px;
     width: 100%;
     height: 2px;
+}
+.progress {
+    background: #FB8F2C;
 }
 .time-block {
     display: flex;
@@ -174,6 +189,7 @@ button {
     border-radius: 50px;
 }
 .item__name {
+    text-align: left;
     width: 100%;
     color: #212121;
     margin-right: 20px;
