Changed icons. Minor script changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
     color: #fff;    
 }
 button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
     outline: none;
     background: transparent;
@@ -187,4 +190,24 @@ button {
     justify-self: flex-end;
     color: #212121;
     font-size: 14px;
+}
+.icon-block {
+    display: flex;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+.fa-icon {
+    font-size: 15px;
+    font-weight: 400;
+    color: #FB8F2C;
+}
+.fa-play, .fa-pause {
+    font-size: 25px;
+}
+.rotate {
+    transform: rotate(180deg);
 }
